<resources>
    <string name="app_name">掌蚊人</string>
    <string name="go_back">go back</string>
    <string name="menu">menu</string>
    <string name="img">image</string>
    <string name="start_right_now">直接開始</string>
    <string name="start_img"></string>

    <string name="menu_hot">疫情地圖</string>
    <string name="menu_hospital">快篩診所</string>
    <string name="menu_breedingSources">環境回報</string>
    <string name="menu_bite">蚊蟲叮咬</string>
    <string name="menu_setting">個人設定</string>
    <string name="menu_reportList">舉報點清單</string>
    <string name="menu_personal_reportList">環境回報點清單</string>
    <string name="menu_item_name">item</string>

    <string name="reportList_title">待檢查孳生源點</string>
    <string name="reportList_number">您有 0 個待處理點</string>
    <string name="reportList_item_name">Name</string>
    <string name="reportList_item_isDone">完成</string>
    <string name="reportList_item_next"><![CDATA[>]]></string>

    <string name="reportList_check_description">補充：</string>
    <string name="reportList_check_type">地點描述：</string>
    <string name="reportList_check_date">通報時間：</string>
    <string name="reportList_check_yes">待審核</string>
    <string name="reportList_check_wait">已通過</string>
    <string name="reportList_check_no">未通過</string>
    <string name="reportList_check_dialogTitle">處理方式</string>
    <string name="reportList_type_wait">待審核</string>
    <string name="reportList_type_not">未通過</string>
    <string name="reportList_type_done">已通過</string>

    <string name="drugBite_title">蚊子叮咬</string>
    <string name="drugBite_text">你被蚊子叮咬嗎？\n請幫忙即刻回報喔!</string>
    <string name="drugBite_success">上傳成功，將提供於蚊媒熱度分析研究</string>
    <string name="drugBite_ps">回報資料能協助研究團隊，\n更精準偵測蚊子的隱性躲藏點，\n資料僅作為研究參考，並遵守個資保護法。</string>

    <string name="breedingSources_title">環境回報</string>
    <string name="breedingSources_photo_camera">開啟相機</string>
    <string name="breedingSources_photo_photo">開啟相簿</string>
    <string name="breedingSources_photo_hint">請拍積水、髒亂處</string>
    <string name="request_permission">This sample needs camera permission.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="breedingSource_button_hb">室內</string>
    <string name="breedingSource_button_ob">戶外</string>>

    <string name="breedingSources_submit_button">環境回報</string>
    <string name="breedingSources_submit_description">*地點簡介</string>
    <string name="breedingSources_submit_address_user">*地址</string>
    <string name="breedingSources_submit_type">*環境點類型：</string>

    <string name="hot_title">環境回報熱區</string>

    <string name="hospital_title">鄰近醫療院所</string>
    <string name="hospital_number">您附近有 0 家醫療院所</string>
    <string name="hospital_item_name">醫院</string>
    <string name="hospital_item_address">地址</string>
    <string name="hospital_item_phone">電話</string>

    <string name="hospital_info_name">院所名稱：</string>
    <string name="hospital_info_address">院所地址：</string>
    <string name="hospital_info_openTime">院所開放時間：</string>
    <string name="hospital_info_tel">院所電話：</string>
    <string name="action_settings">New Day</string>>
    
    <string name="user_setting_title">個人設定</string>
    <string name="user_signup_title">註冊新會員</string>
    <string name="user_login_title">會員登入</string>
    <string name="user_profile_title">個人檔案</string>

</resources>
