<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/menu_menu"
            android:background="@color/colorPrimary"
            android:src="@mipmap/menu"
            android:contentDescription="@string/menu"
            android:layout_alignParentEnd="false"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/menu_title"
            android:id="@+id/breedingSources_submit_title"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textColor="@color/colorText"
            android:layout_alignParentEnd="false"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="20dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_reportList"
            android:id="@+id/menu_reportList"
            android:layout_gravity="center_horizontal"
            android:minWidth="200dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_bite"
            android:id="@+id/menu_bites"
            android:layout_gravity="center_horizontal"
            android:minWidth="200dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_breedingSources"
            android:id="@+id/menu_breedingSources"
            android:layout_gravity="center_horizontal"
            android:minWidth="200dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_hot"
            android:id="@+id/menu_hot"
            android:layout_gravity="center_horizontal"
            android:minWidth="200dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_hospital"
            android:id="@+id/menu_hospital"
            android:layout_gravity="center_horizontal"
            android:minWidth="200dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_logout"
            android:id="@+id/menu_logout"
            android:layout_gravity="center_horizontal"
            android:minWidth="200dp" />

    </LinearLayout>

</LinearLayout>