<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/goback"
            android:background="@color/colorPrimary"
            android:src="@mipmap/go_back"
            android:contentDescription="@string/goBack"
            android:layout_marginLeft="20dp"
            android:layout_centerVertical="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/reportList_title"
            android:id="@+id/title"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textColor="@color/colorText"
            android:layout_marginRight="55dp"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:layout_gravity="center_horizontal" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="40dp"
                android:paddingRight="40dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="400dp"
                    android:id="@+id/reportList_check_image"
                    android:src="@drawable/img"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/img" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/reportList_check_date"
                    android:id="@+id/reportList_check_date"
                    android:layout_gravity="center_horizontal|left" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/reportList_check_type"
                    android:id="@+id/reportList_check_type"
                    android:layout_gravity="center_horizontal|left" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/reportList_check_description"
                    android:id="@+id/reportList_check_description"
                    android:layout_gravity="center_horizontal|left" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:layout_marginTop="20dp">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reportList_check_yes"
                    android:id="@+id/reportList_check_yesButton"
                    android:layout_weight="0.5" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reportList_check_no"
                    android:id="@+id/reportList_check_noButton"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="0.5" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</LinearLayout>