<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/reportList_item_name"
        android:id="@+id/reportList_item_name" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/reportList_item_isDone"
        android:id="@+id/reportList_item_isDone"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="false"
        android:layout_alignParentStart="false"
        android:layout_alignParentRight="true"
        android:layout_marginRight="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/reportList_item_next"
        android:id="@+id/reportList_item_next"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/reportList_item_name"
        android:layout_toEndOf="@+id/reportList_item_name"
        android:layout_alignParentEnd="false"
        android:layout_alignParentStart="false"
        android:gravity="right"
        android:layout_alignParentRight="true" />

</RelativeLayout>