<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/goback"
            android:background="@color/colorPrimary"
            android:src="@mipmap/go_back"
            android:contentDescription="@string/goBack"
            android:layout_marginLeft="20dp"
            android:layout_centerVertical="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/hospital_title"
            android:id="@+id/title"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textColor="@color/colorText"
            android:layout_marginRight="55dp"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:layout_gravity="center_horizontal" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="40dp"
            android:paddingTop="20dp"
            android:paddingRight="40dp"
            android:paddingBottom="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/hospital_info_name"
                android:id="@+id/hospital_info_name"
                android:layout_gravity="center_horizontal|left" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/hospital_info_address"
                android:id="@+id/hospital_info_address"
                android:layout_gravity="center_horizontal|left" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/hospital_info_openTime"
                android:id="@+id/hospital_info_openTime"
                android:layout_gravity="center_horizontal|left" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/hospital_info_tel"
                android:id="@+id/hospital_info_tel"
                android:layout_gravity="center_horizontal|left" />
        </LinearLayout>
    </ScrollView>


</LinearLayout>