<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:background="@color/colorPrimary">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/breedingSources_title"
            android:textColor="#ffffff"
            android:textSize = "24sp"
            android:id="@+id/title"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/go_back"
            android:background="@mipmap/go_back"
            android:contentDescription="@string/go_back"
            android:layout_alignParentRight="false"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/scrollView"
            android:layout_alignParentTop="true"
            android:layout_above="@+id/menu">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:id="@+id/breedingSources_img"
                    android:contentDescription="@string/img"
                    android:layout_gravity="center_horizontal" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/breedingSources_submit_type"
                    android:id="@+id/breedingSources_submit_type_text" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:background="#00000000"
                            android:id="@+id/button_hb"
                            android:src="@drawable/home_bottle"
                            android:contentDescription="@string/img"
                            android:layout_margin="10dp" />
                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:background="#00000000"
                            android:id="@+id/button_ob"
                            android:src="@drawable/outdoor_bottle"
                            android:contentDescription="@string/img"
                            android:layout_margin="10dp" />
                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:background="#00000000"
                            android:id="@+id/button_og"
                            android:src="@drawable/outdoor_grass"
                            android:contentDescription="@string/img"
                            android:layout_margin="10dp" />
                    </LinearLayout>
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/breedingSources_submit_description"
                    android:id="@+id/breedingSources_submit_description_text"
                    android:layout_marginTop="20dp"
                    android:layout_weight="0.21" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:ems="10"
                    android:id="@+id/breedingSources_submit_description_value"
                    android:windowSoftInputMode="stateHidden" />

                <Button
                    android:layout_width="118dp"
                    android:layout_height="wrap_content"
                    android:text="@string/breedingSources_submit_button"
                    android:id="@+id/breedingSources_submit_submit"
                    android:background="@drawable/breeding_source_submit_border"
                    android:textSize = "18sp"
                    android:gravity="center"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp" />
            </LinearLayout>
        </ScrollView>

        <GridView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:id="@+id/menu"
            android:background="@color/menuBackground"
            android:layout_alignParentBottom="true" />

    </RelativeLayout>


</LinearLayout>