<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:background="@color/colorPrimary">

        <Button
            android:text="登出"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/title"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:id="@+id/logout_btn"
            android:background="@android:color/transparent"
            android:textColor="@color/colorText"
            android:visibility="invisible" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/reportList_title"
            android:textColor="#ffffff"
            android:textSize = "24sp"
            android:id="@+id/title"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#EEEEEE">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/reportList_info">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/reportList_number"
                android:id="@+id/reportList_number"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:paddingTop="20dp"
                android:paddingBottom="20dp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:gravity="center">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="210dp"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="70dp"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/reportList_type_wait"
                        android:gravity="center"
                        android:background="@drawable/choice_border_clicked"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:id="@+id/reportList_type_wait" />

                    <TextView
                        android:layout_width="70dp"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/reportList_type_done"
                        android:gravity="center"
                        android:background="@drawable/choice_border"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:id="@+id/reportList_type_done" />


                    <TextView
                        android:layout_width="70dp"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/reportList_type_not"
                        android:gravity="center"
                        android:background="@drawable/choice_border"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:id="@+id/reportList_type_not" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:id="@+id/loadingPanel"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center" >

                <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:indeterminate="true" />
            </LinearLayout>

        </LinearLayout>

        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/reportList_list"
            android:layout_gravity="center_horizontal"
            android:layout_above="@+id/menu"
            android:layout_below="@+id/reportList_info"
            android:focusable="false" />

        <GridView
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:id="@+id/menu"
            android:background="@color/menuBackground"
            android:layout_alignParentBottom="true" />

    </RelativeLayout>
</LinearLayout>